tests/NormalTests/paczka1/small_fuzzy/55934844.err
Error in line 4: bQ1w S691 59,0
Error in line 13: 5QOaA S691 202,45
